--- a/Indecision App/ClientApp/public/index.html
+++ b/Indecision App/ClientApp/public/index.html
@@ -4,12 +4,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Indecision App</title>
     <link rel="icon" type="image/png" href="/images/favicon.png">
+
+    <title>Indecision App</title>
+
+    <!-- Main font -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/vendor/fonts/roboto.css">
+
+    <!-- Icon fonts -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/vendor/fonts/fontawesome.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/vendor/fonts/ionicons.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/vendor/fonts/linearicons.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/vendor/fonts/open-iconic.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/vendor/fonts/pe-icon-7-stroke.css">
+
+    <!-- Core stylesheets -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/vendor/css/bootstrap.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/vendor/css/appwork.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/vendor/css/theme-soft.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/vendor/css/colors.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/vendor/css/uikit.css">
+
+    <!-- Layout helpers -->
+    <script src="%PUBLIC_URL%/vendor/js/layout-helpers.js"></script>
+
+    <!-- Libs -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/vendor/libs/perfect-scrollbar/perfect-scrollbar.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/vendor/libs/spinkit/spinkit.css">
 </head>
 
 <body>
     <div id="app"></div>
+
+    <!-- Core scripts -->
+    <script src="%PUBLIC_URL%/lib/jquery/jquery.min.js"></script>
+    <script src="%PUBLIC_URL%/vendor/libs/popper/popper.js"></script>
+    <script src="%PUBLIC_URL%/vendor/js/bootstrap.js"></script>
+    <script src="%PUBLIC_URL%/vendor/js/sidenav.js"></script>
+    <script src="%PUBLIC_URL%/vendor/js/dropdown-hover.js"></script>
+
+    <!-- Libs -->
+    <script src="%PUBLIC_URL%/vendor/libs/perfect-scrollbar/perfect-scrollbar.js"></script>
+    <script src="%PUBLIC_URL%/vendor/libs/block-ui/block-ui.js"></script>
+
     <script src="/bundle.js"></script>
 </body>
 
