--- a/Indecision App/ClientApp/public/index.html
+++ b/Indecision App/ClientApp/public/index.html
@@ -21,7 +21,7 @@
     <!-- Core stylesheets -->
     <link rel="stylesheet" href="%PUBLIC_URL%/vendor/css/bootstrap.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/vendor/css/appwork.css">
-    <link rel="stylesheet" href="%PUBLIC_URL%/vendor/css/theme-soft.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/vendor/css/theme-corporate.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/vendor/css/colors.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/vendor/css/uikit.css">
 
